@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Workaround IE javascript limitations preventing attachments from being uploaded in dynamic view.
 * [mms] Remember mailbox list position when viewing messages in smartmobile view.
 * [mms] Fix handling unsuccessful mailbox import in dynamic view.
 * [mms] Mailbox imports are now limited to 500 messages by default.
@@ -3210,6 +3211,7 @@
    <date>2013-06-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Workaround IE javascript limitations preventing attachments from being uploaded in dynamic view.
 * [mms] Remember mailbox list position when viewing messages in smartmobile view.
 * [mms] Fix handling unsuccessful mailbox import in dynamic view.
 * [mms] Mailbox imports are now limited to 500 messages by default.
